--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,21 +20,30 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
+      - name: Autheticae Google cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+
       - name: Set up google cloud sdk
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GOOGLE_CREDENTIALS }}
-          export_default_credentials: true
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
       - name: Terraform Init
-        run: terraform init
+        run:
+          cd terraform 
+          terraform init
 
       - name: Terraform Plan
-        run: terraform plan
+        run:
+          cd terraform 
+          terraform plan
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run:
+          cd terraform 
+          terraform apply -auto-approve
