--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+      GOOGLE_CREDENTIALS: ${{ secrets.GCP_DEMO_CREDENTIAL }}
       GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
       TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
       TF_VAR_region: ${{ secrets.GCP_REGION }}
@@ -23,7 +23,7 @@ jobs:
       - name: Autheticae Google cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+          credentials_json: ${{ secrets.GCP_DEMO_CREDENTIAL }}
 
       - name: Set up google cloud sdk
         uses: google-github-actions/setup-gcloud@v2
